--- a/09-demo-kaola/css/common.css
+++ b/09-demo-kaola/css/common.css
@@ -4,3 +4,14 @@ body {
 	font: 12px/1.5 Helvetica Neue,Helvetica,Arial,Hiragino Sans GB,\5FAE\8F6F\96C5\9ED1,tahoma,simsun,\5b8b\4f53;
 	color: #999;
 }
+.clear-fixe::after {
+				content: "";
+				display: block;
+				clear: both;
+				height: 0;
+				visibility: hidden;
+}
+.wrap {
+	width: 1100px;
+	margin: 0 auto;
+}
